--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -17,22 +17,15 @@ builds:
       - arm
       - arm64
     goarm:
-      - 6
-      - 7
+      - '6'
+      - '7'
     ignore:
       - goos: darwin
-        goarch: 386
+        goarch: '386'
     binary: bpm
     main: ./cmd/bpm
     ldflags:
       - -X main.build={{ .Version }}
-archives:
-  - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
 checksum:
   name_template: 'checksums.txt'
 snapshot:
