--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,7 +16,8 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: 1.17
+        go-version: '>=1.20.1'
+        cache: true
 
     - name: Build
       run: go build -v ./...
