--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -2,10 +2,10 @@ name: goreleaser-check
 
 on:
   push:
-    branches: [main]
+    branches: [master]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [main]
+    branches: [master]
 
 jobs:
   goreleaser-check:
